syntax = "proto3";

package api.qycms_bff.admin.v1;
import "google/api/annotations.proto";
import  "google/protobuf/timestamp.proto";
option go_package = "github.com/iwinder/qingyucms/api/qycms_bff/admin/v1;v1";
option java_multiple_files = true;
option java_package = "api.qycms_bff.admin.v1";

// 文章管理
service QyAdminArticle {
	// 新增
	rpc CreateQyAdminArticle (CreateQyAdminArticleRequest) returns (CreateQyAdminArticleReply){
		option (google.api.http) = {
			post: "/api/admin/v1/article",
			body:"*"
		};
	};
	// 更新
	rpc UpdateQyAdminArticle (UpdateQyAdminArticleRequest) returns (UpdateQyAdminArticleReply){
		option (google.api.http) = {
			put: "/api/admin/v1/article/{id}",
			body:"*"
		};
	};
	// 删除
	rpc DeleteQyAdminArticle (DeleteQyAdminArticleRequest) returns (DeleteQyAdminArticleReply){
		option (google.api.http) = {
			delete: "/api/admin/v1/article",
			body:"*"
		};
	};
	// 获取详情
	rpc GetQyAdminArticle (GetQyAdminArticleRequest) returns (GetQyAdminArticleReply){
		option (google.api.http) = {
			get: "/api/admin/v1/article/{id}",
		};
	};
	// 生成文章链接
	rpc InitQyAdminArticlePermaLink (InitQyAdminArticlePermaLinkRequest) returns (InitQyAdminArticlePermaLinkReply){
		option (google.api.http) = {
			post: "/api/admin/v1/article/initPermaLink",
			body:"*"
		};
	};
	// 列表
	rpc ListQyAdminArticle (ListQyAdminArticleRequest) returns (ListQyAdminArticleReply){
		option (google.api.http) = {
			get: "/api/admin/v1/article",
		};
	};
}

message ArticlePageInfo {
	int64 current = 1;
	int64 pageSize = 2;
	int64 total = 3;
	int64 pages = 4;
	bool firstFlag = 5;
	bool lastFlag = 6;
}

message ATagInfo{
	uint64 id = 1;
	string name =2;
}
message ArticleInfoResponse {
	uint64 id = 1;
	string title= 2;
	string permaLink= 3;
	string canonicalLink= 4;
	string summary= 5;
	string thumbnail= 6;
	string password= 7;
	int32 statusFlag = 8;
	int32  atype = 9;
	uint64 authorId = 10;
	uint64 categoryId = 11;
	uint64 commentAgentId = 12;
	bool published = 13;
	int32 viewCount = 14;
	int32 likeCount = 15;
	int32 hateCount = 16;
	string content = 17;
	string contentHtml = 18;
	google.protobuf.Timestamp publishedAt = 19;
	string nickName = 20;
	repeated string tagStrings = 21;
	string categoryName = 22;
	bool commentFlag = 23;
	repeated ArticleResourcesInfoResponse resources = 24;
}

message CreateQyAdminArticleRequest {
	string title= 2;
	string permaLink= 3;
	string canonicalLink= 4;
	string summary= 5;
	string thumbnail= 6;
	string password= 7;
	int32 statusFlag = 8;
	int32 atype = 9;
	uint64 authorId = 10;
	uint64 categoryId = 11;
	uint64 commentAgentId = 12;
	bool published = 13;
	string content = 17;
	string contentHtml = 18;
	string nickName = 20;
	repeated string tagStrings = 21;
	string categoryName = 22;
	bool commentFlag = 23;
	repeated ArticleResourcesInfoResponse resources = 24;
}
message CreateQyAdminArticleReply {
	uint64 id = 1;
}

message UpdateQyAdminArticleRequest {
	uint64 id = 1;
	string title= 2;
	string permaLink= 3;
	string canonicalLink= 4;
	string summary= 5;
	string thumbnail= 6;
	string password= 7;
	int32 statusFlag = 8;
	int32 atype = 9;
	uint64 authorId = 10;
	uint64 categoryId = 11;
	uint64 commentAgentId = 12;
	bool published = 13;
	string content = 17;
	string contentHtml = 18;
	string nickName = 20;
	repeated string tagStrings = 21;
	string categoryName = 22;
	bool commentFlag = 23;
	repeated ArticleResourcesInfoResponse resources = 24;
}
message UpdateQyAdminArticleReply {
	uint64 id = 1;
}

message DeleteQyAdminArticleRequest {
	repeated uint64 ids = 1;
}
message DeleteQyAdminArticleReply {}

message GetQyAdminArticleRequest {
	uint64 id = 1;
}
message GetQyAdminArticleReply {
	ArticleInfoResponse data = 1;
}
message InitQyAdminArticlePermaLinkRequest {
	string title = 1;
}
message InitQyAdminArticlePermaLinkReply {
	string permaLink = 1;
}

message ListQyAdminArticleRequest {
	int64 current = 1;
	int64 pageSize = 2;
	int64 total = 3;
	int64 pages = 4;
	bool firstFlag = 5;
	bool lastFlag = 6;
	string searchText = 7;
	int32 statusFlag = 8;
	int32  atype = 9;
}
message ListQyAdminArticleReply {
	ArticlePageInfo pageInfo = 1;
	repeated ArticleInfoResponse items = 2;
}


message ArticleResourcesInfoResponse {
	uint64 id = 1;
	string name= 2;
	string url= 3;
	string password= 4;
}